# claude-code-vitals

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  demo.tape  install.sh  pyproject.toml
.github/workflows/: tests.yml
claude_code_vitals/: __init__.py  __main__.py  config.py  detector.py  explain.py  init_cmd.py  logger.py  oauth.py  renderer.py
tests/: test_core.py
